[package]
name = "libmanta"
version = "0.1.0"
authors = ["Rui Loura <rui@joyent.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
quickcheck = "0.8.3"
uuid = {version = "0.7.4", features = ["v4"] }
md5 = "0.6.1"
base64 = "0.10.1"
rand = "0.6.5"
regex = "1.1.9"
